# percolator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: lattice.cpp  lattice.h  main.cpp  supervisor.cpp  supervisor.h  utility.cpp  utility.h
src/graphics/: imgui_latticeview.cpp  imgui_latticeview.h  latticewindow.cpp  latticewindow.h
